Breathe: Fix inconsistent spacing in welcome banner.
Props SergeyBiryukov.
Fixes #2284.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@4710 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-breathe/style.css
@@ -658,7 +658,7 @@ nav.o2-post-footer-actions ul li > span > a {
 	clear: left;
 }
 
-.single-handbook .widget-area {
+.single-handbook .site-main .widget-area {
 	float: left;
 	margin-right: 4%;
 }
